change flder name

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 #vault_password_file = /etc/ansible/ngito-vault-key
-hostfile = ./inventory
+hostfile = ./inventories/
 library = ./library
 roles_path = roles/:roles/galaxy
 module_name = command
